--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@heroicons/react": "^2.1.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
