--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@react-pdf/renderer": "^3.4.4",
+    "mongodb": "^6.8.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
